--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "serve": "webpack-dev-server  --node-env development -c ./build/webpack.dev.js --color",
-    "build": "npx webpack-cli --node-env production -c ./build/webpack.pro.js"
+    "serve": "webpack server  --node-env development -c ./build/webpack.dev.js --color",
+    "build": "webpack --node-env production -c ./build/webpack.pro.js"
   },
   "keywords": [],
   "author": "",
