--- a/package.json
+++ b/package.json
@@ -12,20 +12,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.18.5",
+    "@babel/core": "^7.12.16",
     "babel-loader": "^8.2.5",
     "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
+    "postcss-loader": "^7.0.0",
     "script-ext-html-webpack-plugin": "^2.1.5",
     "style-loader": "^3.3.1",
+    "vue-loader": "^17.0.0",
+    "vue-style-loader": "^4.1.3",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "vue": "^3.2.37",
+    "vue-router": "^4.0.16"
   }
 }
