--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.16",
+    "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "postcss-loader": "^7.0.0",
+    "progress-bar-webpack-plugin": "^2.1.0",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.0",
     "script-ext-html-webpack-plugin": "^2.1.5",
     "style-loader": "^3.3.1",
     "vue-loader": "^17.0.0",
