--- a/package.json
+++ b/package.json
@@ -13,21 +13,27 @@
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.12.16",
+    "@babel/eslint-parser": "^7.18.2",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "babel-polyfill": "^6.26.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
+    "eslint": "^8.18.0",
+    "eslint-config-alloy": "^4.5.1",
+    "eslint-plugin-vue": "^9.1.1",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "postcss-loader": "^7.0.0",
+    "prettier": "^2.7.1",
     "progress-bar-webpack-plugin": "^2.1.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.0",
     "script-ext-html-webpack-plugin": "^2.1.5",
     "style-loader": "^3.3.1",
+    "vue-eslint-parser": "^9.0.3",
     "vue-loader": "^17.0.0",
     "vue-style-loader": "^4.1.3",
     "webpack": "^5.73.0",
