--- a/package.json
+++ b/package.json
@@ -6,11 +6,19 @@
   "scripts": {
     "start": "npm run serve",
     "serve": "webpack server --config ./build/webpack.dev.js --color",
-    "build": "webpack --config ./build/webpack.pro.js --progress --color"
+    "build": "webpack --config ./build/webpack.pro.js --progress --color",
+    "lint": "npx eslint --ext .js,.jsx,.vue src",
+    "lint:fix": "npx eslint --fix --ext .js,.jsx,.vue src",
+    "prepare": "husky install",
+    "postinstall": "husky install",
+    "pre-commit": "lint-staged"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "lint-staged": {
+    "*.{js,vue}": "eslint --cache --fix"
+  },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.18.2",
@@ -23,9 +31,11 @@
     "eslint": "^8.18.0",
     "eslint-config-alloy": "^4.5.1",
     "eslint-plugin-vue": "^9.1.1",
-    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.5.0",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
     "mini-css-extract-plugin": "^2.6.1",
+    "postcss": "^8.4.14",
     "postcss-loader": "^7.0.0",
     "prettier": "^2.7.1",
     "progress-bar-webpack-plugin": "^2.1.0",
