--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "vue-loader-demo",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
   "scripts": {
     "start": "npm run serve",
     "serve": "webpack server --config ./build/webpack.dev.js --color",
@@ -22,6 +21,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.18.2",
+    "@types/vue-router": "^2.0.0",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "babel-polyfill": "^6.26.0",
@@ -31,6 +31,7 @@
     "eslint": "^8.18.0",
     "eslint-config-alloy": "^4.5.1",
     "eslint-plugin-vue": "^9.1.1",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
@@ -43,6 +44,8 @@
     "sass-loader": "^13.0.0",
     "script-ext-html-webpack-plugin": "^2.1.5",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
     "vue-eslint-parser": "^9.0.3",
     "vue-loader": "^17.0.0",
     "vue-style-loader": "^4.1.3",
