--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "progress-bar-webpack-plugin": "^2.1.0",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.0",
+    "sass-resources-loader": "^2.2.5",
     "script-ext-html-webpack-plugin": "^2.1.5",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.1",
