--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.18.2",
     "@types/lodash": "^4.14.182",
+    "@types/node": "^18.0.0",
+    "@types/webpack-env": "^1.17.0",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
     "autoprefixer": "^10.4.7",
