--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^8.18.0",
     "eslint-config-alloy": "^4.5.1",
     "eslint-plugin-vue": "^9.1.1",
+    "fork-ts-checker-webpack-plugin": "^7.2.11",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.1",
