--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "style-loader": "^3.3.1",
     "ts-loader": "^9.3.1",
     "typescript": "^4.7.4",
+    "unplugin-auto-import": "^0.9.2",
+    "unplugin-vue-components": "^0.21.0",
     "vue-eslint-parser": "^9.0.3",
     "vue-loader": "^17.0.0",
     "vue-style-loader": "^4.1.3",
@@ -67,6 +69,7 @@
   "dependencies": {
     "@vueuse/core": "^8.7.5",
     "axios": "^0.27.2",
+    "element-plus": "^2.2.8",
     "lodash": "^4.17.21",
     "vue": "^3.2.37",
     "vue-router": "^4.0.16"
