--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
+    "cz-conventional-changelog": "^3.3.0",
     "eslint": "^8.18.0",
     "eslint-config-alloy": "^4.5.1",
     "eslint-plugin-vue": "^9.1.1",
