--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/webpack-env": "^1.17.0",
     "@typescript-eslint/eslint-plugin": "^5.30.0",
     "@typescript-eslint/parser": "^5.30.0",
+    "@vitejs/plugin-vue": "^2.3.3",
     "autoprefixer": "^10.4.7",
     "babel-loader": "^8.2.5",
     "babel-polyfill": "^6.26.0",
@@ -62,23 +63,23 @@
     "typescript": "^4.7.4",
     "unplugin-auto-import": "^0.9.2",
     "unplugin-vue-components": "^0.21.0",
+    "vite": "^2.9.13",
+    "vite-plugin-imagemin": "^0.6.1",
     "vue-eslint-parser": "^9.0.3",
     "vue-loader": "^17.0.0",
     "vue-style-loader": "^4.1.3",
+    "vue-tsc": "^0.38.3",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.9.2",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
     "@vueuse/core": "^8.7.5",
     "axios": "^0.27.2",
     "element-plus": "^2.2.8",
     "lodash": "^4.17.21",
-    "vite": "^2.9.13",
     "vue": "^3.2.37",
-    "vue-router": "^4.0.16",
-    "vue-tsc": "^0.38.3"
+    "vue-router": "^4.0.16"
   }
 }
