--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "pre-commit": "lint-staged",
     "commitlint": "npx commitlint -e",
     "serve:vite": "vite",
-    "build:vite": "vue-tsc --noEmit && vite build"
+    "build:vite": "vue-tsc --noEmit && vite build",
+    "report": "rimraf dist && cross-env vite build"
   },
   "keywords": [],
   "author": "",
@@ -54,6 +55,8 @@
     "postcss-loader": "^7.0.0",
     "prettier": "^2.7.1",
     "progress-bar-webpack-plugin": "^2.1.0",
+    "rollup": "^2.77.2",
+    "rollup-plugin-visualizer": "^5.7.1",
     "sass": "^1.53.0",
     "sass-loader": "^13.0.0",
     "sass-resources-loader": "^2.2.5",
